WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208646
[LFC][Integration] Reset position style on line breaks.
https://bugs.webkit.org/show_bug.cgi?id=208646
Summary
[LFC][Integration] Reset position style on line breaks.
zalan
Reported
2020-03-05 09:18:34 PST
so that we don't end up with out-of-flow positioned line breaks.
Attachments
Patch
(3.60 KB, patch)
2020-03-05 09:31 PST
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-05 09:19:02 PST
<
rdar://problem/60086589
>
zalan
Comment 2
2020-03-05 09:31:06 PST
Created
attachment 392586
[details]
Patch
WebKit Commit Bot
Comment 3
2020-03-05 10:37:48 PST
The commit-queue encountered the following flaky tests while processing
attachment 392586
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2020-03-05 10:38:36 PST
Comment on
attachment 392586
[details]
Patch Clearing flags on attachment: 392586 Committed
r257928
: <
https://trac.webkit.org/changeset/257928
>
WebKit Commit Bot
Comment 5
2020-03-05 10:38:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug