[LFC][Integration] Reset position style on line breaks. https://bugs.webkit.org/show_bug.cgi?id=208646 <rdar://problem/60086589>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/inline/out-of-flow-positioned-line-break.html

We need to treat line breaks as statically positioned inline content.
In the long run we should do something along these lines:
https://github.com/w3c/csswg-drafts/issues/610

* layout/integration/LayoutIntegrationBoxTree.cpp:
(WebCore::LayoutIntegration::BoxTree::buildTree):

LayoutTests:

* fast/inline/out-of-flow-positioned-line-break-expected.txt: Added.
* fast/inline/out-of-flow-positioned-line-break.html: Added.


Canonical link: https://commits.webkit.org/221559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257928 268f45cc-cd09-0410-ab3c-d52691b4dbfc